generate-train-algo-enemy/errorFile122-02-2020-02-50-07-1582357807407--1247637588.txt
Traceback (most recent call last):
  File "/home/yuntian/Dropbox/Terminal/yuntian/C1GamesStarterKit/generate-train-algo/algo_strategy.py", line 1, in <module>
    import gamelib
  File "/home/yuntian/Dropbox/Terminal/yuntian/C1GamesStarterKit/generate-train-algo/gamelib/__init__.py", line 22, in <module>
    from .algocore import AlgoCore
  File "/home/yuntian/Dropbox/Terminal/yuntian/C1GamesStarterKit/generate-train-algo/gamelib/algocore.py", line 87
    filenames = glob.glob(run_'*.pkl')
                                    ^
SyntaxError: invalid syntax
